--- a/syndishanx_rtm_tool/syndishanx_rtm_tool.csproj
+++ b/syndishanx_rtm_tool/syndishanx_rtm_tool.csproj
@@ -3,11 +3,16 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <RootNamespace>SuperAwesomeBO6Tool</RootNamespace>
+    <RootNamespace>syndishanx_rtm_tool</RootNamespace>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LibDebug\LibDebug.csproj" />
